--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"@fontsource/fira-mono": "^4.5.0",
 		"@lukeed/uuid": "^2.0.0",
 		"cookie": "^0.4.1",
+		"papercss": "^1.8.3",
+		"spaper": "^0.5.6",
 		"svelte-image-compare": "^1.1.1"
 	}
 }
